cmake_minimum_required(VERSION 3.27)
project(Lesson_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(A ../Lesson_1/A.cpp)
add_executable(B ../Lesson_1/B.cpp)
add_executable(C ../Lesson_1/C.cpp)
add_executable(D ../Lesson_1/D.cpp)
add_executable(E ../Lesson_1/E.cpp)
add_executable(F ../Lesson_1/F.cpp)
add_executable(G ../Lesson_1/G.cpp)
add_executable(H ../Lesson_1/H.cpp)
add_executable(I ../Lesson_1/I.cpp)
add_executable(J ../Lesson_1/J.cpp)