cmake_minimum_required(VERSION 3.27)
project(Lesson_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(A ../Lesson_2/A.cpp)
add_executable(B ../Lesson_2/B.cpp)
add_executable(C ../Lesson_2/C.cpp)
add_executable(D ../Lesson_2/D.cpp)
add_executable(E ../Lesson_2/E.cpp)
add_executable(F ../Lesson_2/F.cpp)
add_executable(G ../Lesson_2/G.cpp)
add_executable(H ../Lesson_2/H.cpp)
add_executable(I ../Lesson_2/I.cpp)
add_executable(J ../Lesson_2/J.cpp)
