cmake_minimum_required(VERSION 3.27)
project(Lesson_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(A ../Lesson_3/A.cpp)
add_executable(B ../Lesson_3/B.cpp)
add_executable(C ../Lesson_3/C.cpp)
add_executable(D ../Lesson_3/D.cpp)
add_executable(E ../Lesson_3/E.cpp)
add_executable(F ../Lesson_3/F.cpp)
add_executable(G ../Lesson_3/G.cpp)
add_executable(H ../Lesson_3/H.cpp)
add_executable(I ../Lesson_3/I.cpp)
add_executable(J ../Lesson_3/J.cpp)
