cmake_minimum_required(VERSION 3.27)
project(Lesson_5)

set(CMAKE_CXX_STANDARD 17)

add_executable(A ../Lesson_5/A.cpp)
add_executable(B ../Lesson_5/B.cpp)
add_executable(C ../Lesson_5/C.cpp)
add_executable(D ../Lesson_5/D.cpp)
add_executable(E ../Lesson_5/E.cpp)
add_executable(F ../Lesson_5/F.cpp)
add_executable(G ../Lesson_5/G.cpp)
add_executable(H ../Lesson_5/H.cpp)
add_executable(I ../Lesson_5/I.cpp)
add_executable(J ../Lesson_5/J.cpp)